Fixes #110 - chrome spacing

--- a/src/app/component/analysis-graph/analysis-graph.component.scss
+++ b/src/app/component/analysis-graph/analysis-graph.component.scss
@@ -54,8 +54,9 @@
     border-radius: 4px;
     pointer-events: none;
   }
-
-  .apexcharts-canvas {
-    margin-bottom: -50px;
+  
+  apx-chart > div {
+    min-height: 0 !important;
+    height: 225px !important;
   }
 }
